prow/cluster/crier_deployment.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: crier
  labels:
    app: crier
spec:
  replicas: 1  # This will race with itself. Only run one at a time.
  template:
    metadata:
      labels:
        app: crier
    spec:
      nodeSelector:
        role: prow
      terminationGracePeriodSeconds: 30
      containers:
      - name: crier
        image: __REGISTRY__/crier:0.5
        args:
        - "--dry-run=true"
        - "--github-bot-name=k8s-ci-robot"
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - name: oauth
          mountPath: /etc/github
          readOnly: true
      volumes:
      - name: oauth
        secret:
          secretName: oauth-token
