prow/cluster/deck_deployment.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deck
  labels:
    app: deck
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: deck
    spec:
      nodeSelector:
        role: prow
      terminationGracePeriodSeconds: 30
      containers:
      - name: deck
        image: __REGISTRY__/deck:0.16
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
        args:
        - --jenkins-url=$(JENKINS_URL)
        volumeMounts:
        - mountPath: /etc/jenkins
          name: jenkins
          readOnly: true
      volumes:
      - name: jenkins
        secret:
          defaultMode: 420
          secretName: jenkins-token
