prow/cluster/sinker_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sinker
  labels:
    app: sinker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sinker
    spec:
      nodeSelector:
        role: prow
      containers:
      - name: sinker
        image: __REGISTRY__/sinker:0.4
