prow/cluster/splice_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: splice
  labels:
    app: splice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: splice
    spec:
      nodeSelector:
        role: prow
      containers:
      - name: splice
        image: __REGISTRY__/splice:0.11
        volumeMounts:
        - name: job-configs
          mountPath: /etc/jobs
          readOnly: true
        args:
        - -log-json
      volumes:
      - name: job-configs
        configMap:
          name: job-configs
