prow/cluster/tot_deployment.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tot
  labels:
    app: tot
spec:
  replicas: 1  # one canonical source of build numbers
  template:
    metadata:
      labels:
        app: tot
    spec:
      nodeSelector:
        role: prow
      terminationGracePeriodSeconds: 30
      containers:
      - name: tot
        image: __REGISTRY__/tot:0.0
        imagePullPolicy: Always
        args:
        - -log-json
        - -storage=/store/tot.json
        ports:
          - name: http
            containerPort: 8888
