prow/cluster/ingress.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing
  annotations:
    "kubernetes.io/ingress.global-static-ip-name": prow
spec:
  tls:
  - secretName: 'prow-k8s-cert'
    hosts:
    - 'prow.azure-containers.io'
  rules:
  - host: 'prow.azure-containers.io'
    http:
      paths:
      - path: /
        backend:
          serviceName: deck
          servicePort: 80
      - path: /hook
        backend:
          serviceName: hook
          servicePort: 8888
      - path: /.well-known/
        backend:
          serviceName: marque
          servicePort: 80
